<resources>
    <string name="app_name">LazyPush</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Marcus Jonas Curioso</string>
    <string name="nav_header_subtitle">curiosomarcusjonas24@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_splash_screen">SplashScreenActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- Add Tasks -->
    <string name="task_name">Task Name</string>
    <string name="task_date">Task Date Schedule</string>
    <string name="task_time">Task Time Schedule</string>
    <string name="content">Task Description</string>
    <string name="add_task">Add Task</string>
    <string name="browse_date">Select Date </string>
    <string name="browse_time">Select Time </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
<<<<<<< HEAD

    <string name="add_task_btn">+ Add Task</string>
    =======
=======
    <string name="add_task_btn">+ Add Task</string>
>>>>>>> 907fb2f79f957bf1856ba4c91e51982e234c34c5
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="pref_header_general">General</string>

    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>

    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>

    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Data & Sync -->
    <string name="pref_header_data_sync">Data &amp; sync</string>

    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>

    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>

    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>

    <string-array name="multi_select_list_preference_default_value" />

    <string name="pref_title_system_sync_settings">System sync settings</string>

    <!-- Example settings for Notifications -->
    <string name="pref_header_notifications">Notifications</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
<<<<<<< HEAD
    >>>>>>> 93f7aa9a8c0f3f4c7e36012ff87144655b98a326
=======
>>>>>>> 907fb2f79f957bf1856ba4c91e51982e234c34c5

    <string name="hello_world">Hello world!</string>

    <string name="expanded">I\'m the expanded notification.\nCollapse me!</string>
    <string name="collapsed">I\'m the collapsed notification.\nCreated at: %s</string>
    <string name="show_notification">Show Notification</string>
    <string name="custom_notification">I\'m a custom notification.</string>

    <string name="intro_text">This sample demonstrates how a notification is created using the
        <b>NotificationCompatBuilder</b>
        with a custom content view. The layout of the notification is defined as a
        layout resource and inflated as a <b>RemoteViews</b> object.
        \n\nOn API level 16 and above, a different layout is inflated and set as
        the <i>big content view</i>, which is used when the notification is expanded.
        \n\n<b>Use the button below to create the notification.
        \n\nIf your device is running Jelly Bean or above, try expanding or collapsing
        the notification to see the different layouts.</b>
    </string>
    <string name="collapsed_image">A single Android robot waving. Symbolises a collapsed
        notification.
    </string>
    <string name="expanded_image">Two Androids on top of each other. Symbolises an expanded
        notification.
    </string>

</resources>
